--- a/index/index.html
+++ b/index/index.html
@@ -2,13 +2,37 @@
 <script>
 var ws = new WebSocket("ws://192.168.1.16:8080/ws");
 ws.onopen = function() {
-    console.log("websocket open");
+    console.log("websocket opened success");
 };
 
 ws.onmessage = function(evt) {
-    //document.getElementById('variable').innerHTML = evt.data;
-    console.log(evt.data)
+    var maze_data = JSON.parse(evt.data);
+
+    var maze = parse_array(maze_data["maze"],maze_data["width"],maze_data["height"]);
+    var is_goal = parseInt(maze_data["is_goal"]);
+    var player_x = parseInt(maze_data["player_x"]);
+    var player_y = parseInt(maze_data["player_y"]);
+    var start_x = parseInt(maze_data["start_x"]);
+    var start_y = parseInt(maze_data["start_y"]);
+    var goal_x = parseInt(maze_data["goal_x"]);
+    var goal_y = parseInt(maze_data["goal_y"]);
+    var screen_width = parseInt(maze_data["width"]);
+    var screen_height = parseInt(maze_data["height"]);
 };
+
+function parse_array(mazedata,width,height){
+    var ary = mazedata.split(' ');
+    var ret = new Array();
+    n = 0;
+    for(i=0;i<height;i++){
+        ret[i] = new Array();
+        for(j=0;j<width;j++){
+            ret[i][j] = parseInt(ary[n]);
+            n++;
+        }
+    }
+    return ret
+}
 </script>
 <body>
     It's work
