--- a/index/index.html
+++ b/index/index.html
@@ -2,7 +2,7 @@
 <script>
 var ws = new WebSocket("ws://192.168.1.16:8080/ws");
 ws.onopen = function() {
-    console.log("websocket opened success");
+    console.log("websocket open succeed");
 };
 
 ws.onmessage = function(evt) {
