--- a/index/index.html
+++ b/index/index.html
@@ -18,36 +18,97 @@ ws.onmessage = function(evt) {
     var goal_y = parseInt(maze_data["goal_y"]);
     var screen_width = parseInt(maze_data["width"]);
     var screen_height = parseInt(maze_data["height"]);
-    display_canvas(maze,start_x,start_y,goal_x,goal_y,player_x,player_y,screen_width,screen_height);
-    console.log(player_x,player_y);
+
+    display_map(maze,start_x,start_y,goal_x,goal_y,player_x,player_y,screen_width,screen_height);
+    display_char(maze,player_x,player_y,screen_width,screen_height)
 };
 
-function display_canvas(maze,start_x,start_y,goal_x,goal_y,player_x,player_y,width,height){
+function display_map(maze,start_x,start_y,goal_x,goal_y,player_x,player_y,width,height){
     var canvas = document.getElementById('map');
     var ctx = canvas.getContext('2d');
-    ctx.fillStyle = 'rgb(255,255,0)';
-    ctx.fillRect(0,0,870,450);
-    for(y=0;y<height;y++){
-        for(x=0;x<width;x++){
-            if(x == start_x && y == start_y){
-                ctx.fillStyle = 'rgb(0,128,0)'
-                ctx.fillRect(x*30,y*30,30,30);
-            }else if(x == goal_x && y == goal_y){
-                ctx.fillStyle = 'rgb(255,0,0)'
-                ctx.fillRect(x*30,y*30,30,30);
-            }else if(maze[y][x] == 1){
-                ctx.fillStyle = 'rgb(255,255,255)'
-                ctx.fillRect(x*30,y*30,30,30);
-            }
-            if(x == player_x && y == player_y){
-                ctx.fillStyle = 'rgb(0,0,0)';
-                ctx.beginPath();
-                ctx.arc(x*30+15,y*30+15,10,0,Math.PI*2,false);
-                ctx.fill();
+
+    var map = new Image();
+    map.onload = function(){
+        for(y=0;y<height;y++){
+            for(x=0;x<width;x++){
+                ctx.drawImage(map,0,0,32,32,x*30,y*30,30,30);
+                if(maze[y][x] == 0){
+                    ctx.drawImage(map,80,40,42,42,x*30,y*30,30,30);
+                }else if(x == goal_x && y == goal_y){
+                    ctx.drawImage(map,0,32*10,35,35,x*30,y*30,30,30);
+                }
             }
         }
-    }
+    };
+
+    map.src = "static/pipo-map001.png";
 }
+
+function display_map(maze,start_x,start_y,goal_x,goal_y,player_x,player_y,width,height){
+    var canvas = document.getElementById('map');
+    var ctx = canvas.getContext('2d');
+
+    var map = new Image();
+    map.onload = function(){
+        for(y=0;y<height;y++){
+            for(x=0;x<width;x++){
+                ctx.drawImage(map,0,0,32,32,x*30,y*30,30,30);
+                if(maze[y][x] == 0){
+                    ctx.drawImage(map,80,40,42,42,x*30,y*30,30,30);
+                }else if(x == goal_x && y == goal_y){
+                    ctx.drawImage(map,0,32*10,35,35,x*30,y*30,30,30);
+                }
+            }
+        }
+    };
+
+    map.src = "static/pipo-map001.png";
+}
+
+function display_char(maze,player_x,player_y,width,height){
+    var canvas = document.getElementById('map');
+    var ctx = canvas.getContext('2d');
+
+    var map = new Image();
+    map.onload = function(){
+        for(y=0;y<height;y++){
+            for(x=0;x<width;x++){
+                if(x == player_x && y == player_y){
+                    ctx.drawImage(map,0,0,32,32,x*30,y*30,30,30);
+                }
+            }
+        }
+    };
+
+    map.src = "static/pipo-simpleenemy01m.png";
+}
+//function display_canvas(maze,start_x,start_y,goal_x,goal_y,player_x,player_y,width,height){
+//    var canvas = document.getElementById('map');
+//    var ctx = canvas.getContext('2d');
+//
+//    ctx.fillStyle = 'rgb(255,255,0)';
+//    ctx.fillRect(0,0,870,450);
+//    for(y=0;y<height;y++){
+//        for(x=0;x<width;x++){
+//            if(x == start_x && y == start_y){
+//                ctx.fillStyle = 'rgb(0,128,0)'
+//                ctx.fillRect(x*30,y*30,30,30);
+//            }else if(x == goal_x && y == goal_y){
+//                ctx.fillStyle = 'rgb(255,0,0)'
+//                ctx.fillRect(x*30,y*30,30,30);
+//            }else if(maze[y][x] == 1){
+//                ctx.fillStyle = 'rgb(255,255,255)'
+//                ctx.fillRect(x*30,y*30,30,30);
+//            }
+//            if(x == player_x && y == player_y){
+//                ctx.fillStyle = 'rgb(0,0,0)';
+//                ctx.beginPath();
+//                ctx.arc(x*30+15,y*30+15,10,0,Math.PI*2,false);
+//                ctx.fill();
+//            }
+//        }
+//    }
+//}
 
 function parse_array(mazedata,width,height){
     var ary = mazedata.split(' ');
@@ -64,6 +125,6 @@ function parse_array(mazedata,width,height){
 }
 </script>
 <body>
-    <canvas id="map" width="870" height="450" style="background-color:yellow";></canvas>
+    <canvas id="map" width="870" height="450"></canvas>
 </body>
 </html>
